name:               solid-cuda
version:            0.1
homepage:           https://github.com/xc-jp/greenia
license:            BSD3
author:             Cross Compass
maintainer:         ubikium@gmail.com
category:           Machine Learning
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md

library
  hs-source-dirs:   src
  exposed-modules:
    Data.Solid.Cuda
    Data.Solid.Cuda.Device
    Data.Solid.Cuda.Internal
    Data.Solid.Cuda.Memory

  extra-libraries:  cudart
  default-language: Haskell2010
  build-depends:
      base
    , exceptions
    , inline-c
    , mtl
    , solid
    , transformers
    , vector

  ghc-options:      -Wall

test-suite tasty
  type:             exitcode-stdio-1.0
  main-is:          tasty.hs
  hs-source-dirs:   test/tasty
  other-modules:
    Data.Solid.Cuda.MemoryTest
    Data.Solid.Cuda.TestUtils

  build-depends:
      base
    , exceptions
    , inline-c
    , QuickCheck
    , solid
    , solid-cuda
    , tasty
    , tasty-quickcheck
    , vector

  ghc-options:      -Wall -threaded
  default-language: Haskell2010
