name:          solid
version:       0.1.0.0

-- synopsis:
-- description:
license:       BSD3

-- license-file:        LICENSE
author:        Author name here
maintainer:    example@example.com
copyright:     2019 Author name here
category:      Web
build-type:    Simple
cabal-version: >=1.10

-- extra-source-files:  README.md

library
  exposed-modules:
    Data.Solid.Approx
    Data.Solid.Array
    Data.Solid.Common
    Data.Solid.Lens
    Data.Solid.Positive
    Data.Solid.Shape
    Data.Solid.Vector

  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:
      aeson
    , base
    , deepseq
    , hspec
    , HUnit
    , ieee754
    , microlens
    , MonadRandom
    , nonlinear
    , prettyprinter
    , random
    , vector

  ghc-options:      -Wall -Wno-name-shadowing

test-suite tasty
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/tasty
  other-modules:    Tensor.ProtoTest
  build-depends:
      base
    , solid
    , tasty
    , tasty-hspec

  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-name-shadowing -haddock
