name:          tensor
version:       0.1.0.0

-- synopsis:
-- description:
license:       BSD3

-- license-file:        LICENSE
author:        Author name here
maintainer:    example@example.com
copyright:     2019 Author name here
category:      Web
build-type:    Simple
cabal-version: >=1.10

-- extra-source-files:  README.md

library
  exposed-modules:
    Data.Elt
    Data.Positive
    Data.Shape
    Tensor.Common
    Tensor.List
    Tensor.Proxy
    Tensor.Storable

  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:
      aeson
    , base
    , binary
    , ieee754
    , MonadRandom
    , prettyprinter
    , random
    , some
    , vector
    , vector-binary-instances

  ghc-options:      -Wall -Wno-name-shadowing
