name:          tensor
version:       0.1.0.0

-- synopsis:
-- description:
license:       BSD3

-- license-file:        LICENSE
author:        Author name here
maintainer:    example@example.com
copyright:     2019 Author name here
category:      Web
build-type:    Simple
cabal-version: >=1.10

-- extra-source-files:  README.md

library
  exposed-modules:
    Data.Approx
    Data.Positive
    Data.Shape
    Tensor
    Tensor.Common
    Tensor.Lens
    Tensor.Vector

  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:
      adjunctions
    , aeson
    , base
    , deepseq
    , hspec
    , HUnit
    , ieee754
    , microlens
    , MonadRandom
    , prettyprinter
    , random
    , vector
    , weave

  ghc-options:      -Wall -Wno-name-shadowing

test-suite tasty
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/tasty
  other-modules:    Tensor.ProtoTest
  build-depends:
      base
    , tasty
    , tasty-hspec
    , tensor

  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-name-shadowing -haddock
